--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <title>Book Appointment</title>
@@ -19,11 +20,11 @@
         <h4>Book Appointment</h4>
         <div id="error"></div>
         <form name="form-body" id="form-id" class="form-inline mb-3">
-            <input placeholder="Name" name="desc" type="text" class="form-control mr-2" id="itemDesc">
-            <input placeholder="Email" name="desc" type="mail" class="form-control mr-2" id="itemDesc">
-            <input placeholder="Phone" type="number" name="amount" class="form-control mr-2" id="itemNum">
+            <input placeholder="Name" name="name" type="text" class="form-control mr-2" id="itemName">
+            <input placeholder="Email" name="mail" type="mail" class="form-control mr-2" id="itemEmail">
+            <input placeholder="Phone" type="number" name="number" class="form-control mr-2" id="itemNum">
             &nbsp;&nbsp;&nbsp;
-            <input id="add_exp" type="submit" class="btn btn-dark" value="Submit">
+            <input id="add_exp" type="submit" name="submit_btn" class="btn btn-dark" value="Submit">
         </form><br>
         <h2>Expenses</h2>
         <ul id="items" class="list-group">
