--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input placeholder="Phone" type="number" name="number" class="form-control mr-2" id="itemNum">
             &nbsp;&nbsp;&nbsp;
             <input id="add_exp" type="submit" name="submit_btn" class="btn btn-dark" value="Submit">
+            <input id="update_exp" type="button" name="update_btn" class="btn btn-dark" value="Update" style="display:none;">
         </form><br>
         <h2>Expenses</h2>
         <ul id="items" class="list-group">
